# SiteScrape

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  nextsteps.md
.github/workflows/: ci.yml  release.yml  wiki-sync.yml
docs/: tech.md
docs/wiki/: Home.md  configuration.md  cookies.md  installation.md  troubleshooting.md
scripts/: release.sh
src/: config.rs  main.rs
src/browser/: engine.rs  mod.rs
src/browser/cookies/: chrome_macos.rs  chrome_win.rs  detect_macos.rs  detect_win.rs  firefox.rs  mod.rs
src/scraper/: converter.rs  crawler.rs  mod.rs  output.rs
src/tui/: app.rs  commands.rs  events.rs  mod.rs  ui.rs
