[package]
name = "sitescrape"
version = "0.1.0"
edition = "2021"
description = "CLI tool to scrape authenticated internal sites and convert to markdown"

[dependencies]
# TUI
ratatui = "=0.30.0"
crossterm = "=0.29.0"

# Browser automation
chromiumoxide = "=0.8.0"
async-trait = "=0.1.88"
futures = "=0.3.31"

# SQLite (bundled, no system dep)
rusqlite = { version = "=0.39.0", features = ["bundled"] }

# HTML to Markdown
htmd = "=0.5.4"

# CLI
clap = { version = "=4.6.0", features = ["derive"] }

# Async runtime
tokio = { version = "=1.51.1", features = ["full"] }

# Config
serde = { version = "=1.0.228", features = ["derive"] }
toml = "=1.1.2"

# Chrome cookie decryption
aes = "=0.9.0"
cbc = "=0.2.0"
pbkdf2 = "=0.12.2"
sha1 = "=0.10.6"
hmac = "=0.12.1"

# HTTP client (for --no-browser mode)
reqwest = { version = "=0.12.18", features = ["cookies"] }

# Progress bar (headless mode)
indicatif = "=0.18.4"

# Error handling
color-eyre = "=0.6.5"

# JSON (for CDP responses)
serde_json = "=1.0.149"

# URL parsing
url = "=2.5.4"

# Temp files
tempfile = "=3.20.0"

# Home directory
dirs = "=6.0.0"

[profile.release]
lto = true
strip = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "=3.7.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "=0.59.0", features = ["Win32_Security_Cryptography", "Win32_Foundation", "Win32_System_Registry"] }
aes-gcm = "=0.10.3"
base64 = "=0.22.1"
